--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <section>
       <h2>What I Like</h2>
-      <img src="Drawing.png" alt="Cologne Central" width="400" />
+      <img src="Drawing.png" alt="Myanmar" width="400" />
     </section>
 
     <section>
@@ -126,12 +126,12 @@
           </tr>
           <tr>
             <td>2022–25</td>
-            <td>University of Europe for Applied Sciences</td>
+            <td>Potsdam, Germany</td>
             <td>B.Sc. Digital Business and Data Science</td>
           </tr>
           <tr>
             <td>2025–Now</td>
-            <td>Berlin School of Economics and Law</td>
+            <td>Berlin, Germany</td>
             <td>M.Sc. Business Intelligence and Process Management</td>
           </tr>
         </tbody>
