--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <section>
       <h2>What I Like</h2>
-      <img src="Drawing.png" alt="Myanmar" width="400" />
+      <img src="Drawing.png" alt="Drawing" width="400" />
     </section>
 
     <section>
