--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
     <section>
       <h2>Born and Raised</h2>
       <p>
-        <a href="https://www.tripsavvy.com/thmb/9JWrnLcZDR4paxVYMN-r2O5T3Co=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/view-of-shwedagon-pagoda-in-yangon--myanmar-3fa39fd4fd124c8787b365d33b917bf8.jpg" target="_blank">
+        <a href="" target="_blank">
           Yangon, Myanmar
         </a>
-        <img src="https://www.tripsavvy.com/thmb/9JWrnLcZDR4paxVYMN-r2O5T3Co=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/view-of-shwedagon-pagoda-in-yangon--myanmar-3fa39fd4fd124c8787b365d33b917bf8.jpg" alt="View of Shwedagon Pagoda in Yangon, Myanmar" width="500" height="333">
       </p>
+        <img src="https://www.tripsavvy.com/thmb/9JWrnLcZDR4paxVYMN-r2O5T3Co=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/view-of-shwedagon-pagoda-in-yangon--myanmar-3fa39fd4fd124c8787b365d33b917bf8.jpg" alt="View of Shwedagon Pagoda in Yangon, Myanmar" width="500" height="333">
     </section>
 
     <section>
