--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <main>
     <section>
       <h2>Current Position</h2>
-      <p><strong>Nadi Kyaw</strong></p>
+      <h3>Nadi Kyaw</h3>
       <p>M.Sc. Business Intelligence and Process Management<br>
       Berlin School of Economics and Law</p>
       <p>
@@ -95,17 +95,13 @@
 
     <section>
       <h2>Born and Raised</h2>
-      <p>
-        <a href="" target="_blank">
-          Yangon, Myanmar
-        </a>
-      </p>
+      <h3>Yangon, Myanmar</h3>
         <img src="https://www.tripsavvy.com/thmb/9JWrnLcZDR4paxVYMN-r2O5T3Co=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/view-of-shwedagon-pagoda-in-yangon--myanmar-3fa39fd4fd124c8787b365d33b917bf8.jpg" alt="View of Shwedagon Pagoda in Yangon, Myanmar" width="500" height="333">
     </section>
 
     <section>
-      <h2>What I Like</h2>
-      <img src="Drawing.png" alt="Drawing" width="400" />
+      <h2>What I Like</h2>
+      <img src="https://drive.google.com/uc?export=view&id=1d74aUAhhBXhrsvYxuykoVNlkcsv_TI9r" alt="Drawing" width="400" />
     </section>
 
     <section>
