--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
       border-bottom: 2px solid #94d2bd;
       padding-bottom: 0.3rem;
     }
+    h3 {
+      color: #0a9396; /* A slightly lighter blue/cyan color */
+      font-size: 1.25rem;
+      margin-top: 1.5rem;
+      border-bottom: 1px solid #e0fbfc; /* A very light separator */
+      padding-bottom: 0.2rem;
+    }
     img {
       display: block;
       margin: 1rem auto;
