--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 
     <section>
       <h2>What I Like</h2>
-      <img src="https://drive.google.com/uc?export=view&id=1d74aUAhhBXhrsvYxuykoVNlkcsv_TI9r" alt="Drawing" width="400" />
+      <img src="https://drive.google.com/uc?export=view&id=1d74aUAhhBXhrsvYxuykoVNlkcsv_TI9r" alt="Drawing" width="400"/>
+      <img src="https://drive.google.com/drive/folders/1Vz_foBATcQvqnI-Caxg8EwLmoSMKRzSv" alt="Drawing" width="400"/>
     </section>
 
     <section>
