--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <section>
       <h2>What I Like</h2>
-      <img src="https://drive.google.com/uc?export=view&id=1Vz_foBATcQvqnI-Caxg8EwLmoSMKRzSv" alt="Drawing" width="400"/>
+      <img src="http://googleusercontent.com/image_collection/image_retrieval/1608818263357718794_0" alt="Digital Art Drawing" width="400" />
     </section>
 
     <section>
