--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <section>
       <h2>What I Like</h2>
-      <img src="https://www.pinterest.com/pin/731412795780864445/" alt="Digital Art Drawing" width="400" />
+      <img src="https://googleusercontent.com/image_collection/image_retrieval/1608818263357718794_0" alt="Digital Art Drawing" width="400" />
     </section>
 
     <section>
