--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <section>
       <h2>What I Like</h2>
-      <img src="Kyite Htee Yoe Pagoda.PNG" alt="Digital Art Drawing" width="400" />
+      <img src="my_drawing.jpg" alt="Digital Art Drawing" width="400" />
     </section>
 
     <section>
