--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             <th>Period</th>
             <th>Location</th>
             <th>Role</th>
+            <th>School</th>
           </tr>
         </thead>
         <tbody>
@@ -128,16 +129,19 @@
             <td>2007–18</td>
             <td>Yangon, Myanmar</td>
             <td>High School</td>
+            <td>Basic Education High School Dagon(1)</td>
           </tr>
           <tr>
             <td>2022–25</td>
             <td>Potsdam, Germany</td>
             <td>B.Sc. Digital Business and Data Science</td>
+            <td>University of Europe for Applied Sciences</td>
           </tr>
           <tr>
             <td>2025–Now</td>
             <td>Berlin, Germany</td>
             <td>M.Sc. Business Intelligence and Process Management</td>
+            <td>Berlin School of Economics and Law</td>
           </tr>
         </tbody>
       </table>
