--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       padding: 0;
       background-color: #fafafa;
       color: #333;
+      size: 12;
     }
     header {
       background-color: #005f73;
@@ -141,7 +142,7 @@
             <td>2025–Now</td>
             <td>Berlin, Germany</td>
             <td>M.Sc. Business Intelligence and Process Management</td>
-            <td>Berlin School of Economics and Law</td>
+            <td>Hochschule für Wirtschaft und Recht Berlin</td>
           </tr>
         </tbody>
       </table>
