--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       padding: 0;
       background-color: #fafafa;
       color: #333;
-      size: 12;
+      font-size: 12;
     }
     header {
       background-color: #005f73;
