--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <section>
       <h2>What I Like</h2>
-      <img src="https://drive.google.com/uc?export=view&id=1d74aUAhhBXhrsvYxuykoVNlkcsv_TI9r" alt="Drawing" width="400" />
+      <img src="assets/my_drawing 1.jpg" alt="Drawing from my computer" width="400" />
     </section>
 
     <section>
