--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
     
       <p>Taking Random Photos</p>
       <div class="image-gallery" data-category="photos">
-        <img src="assets/Random Photo 1.jpg" alt="Random Photo 1" width="400" />
-        <img src="assets/Random Photo 2.jpg" alt="Random Photo 2" width="400" />
-        <img src="assets/Random Photo 3.jpg" alt="Random Photo 3" width="400" />
-        <img src="assets/Random Photo 4.jpg" alt="Random Photo 4" width="400" />
-        <img src="assets/Random Photo 5.jpg" alt="Random Photo 5" width="400" />
-        <img src="assets/Random Photo 6.jpg" alt="Random Photo 6" width="400" />
+        <img src="assets/Random_Photo 1.jpg" alt="Random Photo 1" width="400" />
+        <img src="assets/Random_Photo 2.jpg" alt="Random Photo 2" width="400" />
+        <img src="assets/Random_Photo 3.jpg" alt="Random Photo 3" width="400" />
+        <img src="assets/Random_Photo 4.jpg" alt="Random Photo 4" width="400" />
+        <img src="assets/Random_Photo 5.jpg" alt="Random Photo 5" width="400" />
+        <img src="assets/Random_Photo 6.jpg" alt="Random Photo 6" width="400" />
       </div>
     
       <p>Traveling</p>
@@ -178,7 +178,7 @@
         <img src="assets/Travelling_Budapest.jpg" alt="Traveling photo in Budapest" width="400" />
         <img src="assets/Travelling_Finland.jpg" alt="Traveling photo in Finland" width="400" />
         <img src="assets/Travelling_Heidelberg.jpg" alt="Traveling photo in Heidelberg" width="400" />
-        <img src="assets/Travelling_Koln.jpg" alt="Traveling photo in Cologne" width="400" />
+        <img src="assets/Travelling_Köln.jpg" alt="Traveling photo in Cologne" width="400" />
         <img src="assets/Travelling_Munich.jpg" alt="Traveling photo in Munich" width="400" />
         <img src="assets/Travelling_Venice.jpg" alt="Traveling photo in Venice" width="400" />
       </div>
