--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <img src="assets/Travelling_Budapest.jpg" alt="Traveling photo in Budapest" width="100%" />
         <img src="assets/Travelling_Finland.jpg" alt="Traveling photo in Finland" width="100%" />
         <img src="assets/Travelling_Heidelberg.jpg" alt="Traveling photo in Heidelberg" width="100%" />
-        <img src="assets/Travelling_Köln.jpg" alt="Traveling photo in Cologne" width="100%" />
+        <img src="assets/Travelling_Köln.jpg" alt="Traveling photo in Köln" width="100%" />
         <img src="assets/Travelling_Munich.jpg" alt="Traveling photo in Munich" width="100%" />
         <img src="assets/Travelling_Venice.jpg" alt="Traveling photo in Venice" width="100%" />
       </div>
