--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   
   <main>
     <section>
-      <h2>Current Position</h2>
+      <h2>About Me</h2>
       <h3>Nadi Kyaw</h3>
       <p>M.Sc. Business Intelligence and Process Management<br>
       Berlin School of Economics and Law</p>
