--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <h2>What I Want To</h2>
       <p>Sleeping</p>
       <div class="image-gallery" data-category="sleeping">
-        <img src="" alt="" width="100%" height=""/>
+        <img src="assets/Sleeping.jpg" alt="Sleeping" width="100%" height="450"/>
       </div>
     </section>
 
