--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <section>
       <h2>What I Want To</h2>
-      <p>Sleeping</p>
+      <p>Sleeping💤</p>
       <div class="image-gallery" data-category="sleeping">
         <img src="assets/Sleeping.jpg" alt="Sleeping" width="100%" height="450"/>
       </div>
