--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       z-index: 1000;
     }
     nav a {
-      color: white; /* MATCHES HEADER FONT COLOR */
+      color: #0a9396; /* MATCHES HEADER FONT COLOR */
       text-decoration: none;
       padding: 0.5rem 1.5rem;
       display: inline-block;
